# Predict-Ages

./: .gitignore  Dockerfile  Model-Colab.ipynb  README.md  age_prediction_gradcam.ipynb  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
scripts/: download_data.py  evaluate.py  export_onnx.py  train.py
src/age_prediction/: __init__.py  config.py  dataset.py  evaluate.py  gradcam.py  inference.py  models.py  train.py
tests/: __init__.py  test_dataset.py  test_inference.py  test_models.py
